--- a/template/form.html
+++ b/template/form.html
@@ -24,7 +24,7 @@
                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required
                placeholder="Format: 123-456-7890">
         <br>
-        <input class="input100" type="text" name="message" id="message" height="60" placeholder="Message">
+        <input class="input100" type="text" name="message" id="message" placeholder="Message">
         <br><br>
         <button class="contact100-form-btn" type="submit" name="submit" > submit </button>
     </form>
